--- a/skilled-elearning-landing-page/starter-code/styles.css
+++ b/skilled-elearning-landing-page/starter-code/styles.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    /* overflow-x: hidden; */
 }
 
 body {
@@ -8,7 +7,6 @@ body {
     font-style: normal;
     font-size: 16px;
     width: 1300px;
-    /* height: 1600px; */
     color: #83869A;
     line-height: 28px;
     overflow-x: hidden;
@@ -39,10 +37,10 @@ button {
     color: #FFFFFF;
     background: #13183F;
     border-radius: 28px;
-    /* float: right; */
     margin-top: 38.75px;
     margin-right: 200px;
-    left: 1300px;
+    left: 1100px;
+    z-index: 2;
 }
 
 .dark-button:hover {
@@ -95,7 +93,6 @@ h2 {
     float: right;
     width: 991.63px;
     height: 300.92px;
-    margin-left: 784px;
     margin-top: -80px;
 }
 
@@ -104,7 +101,7 @@ h2 {
     display: flex;
     width: 500px;
     height: 880px;
-    left: 1100px;
+    left:800px;
     top: -45px;
 }
 
@@ -329,8 +326,7 @@ footer {
 
 @media only screen and (max-width: 480px) {
     body {
-        max-width: 100vw;
-        /* overflow-x: hidden; */
+        max-width: 90vw;
     }
     .heading {
         width: 375px;
