--- a/skilled-elearning-landing-page/starter-code/styles.css
+++ b/skilled-elearning-landing-page/starter-code/styles.css
@@ -376,6 +376,7 @@ footer {
         width: 375px;
         height: 320px;
         margin-bottom: 30px;
+        left: 30px;
     }
     .image-hero {
         max-width: 100%;
