--- a/skilled-elearning-landing-page/starter-code/styles.css
+++ b/skilled-elearning-landing-page/starter-code/styles.css
@@ -329,7 +329,7 @@ footer {
         max-width: 100vw;
     }
     .heading {
-        width: 100%;
+        width: 90%;
         height: 48px;
     }
     .dark-logo {
@@ -346,7 +346,7 @@ footer {
         margin-top: 16px;
     }
     .container1 {
-        width: 100%;
+        width: 90%;
         height: 300px;
         margin-top: 10px;
         margin-bottom: 50px;
@@ -381,20 +381,20 @@ footer {
         left: 30px;
     }
     .image-hero {
-        max-width: 100%;
+        max-width: 90%;
         height: 301px;
         left: 24px;
         top: 433px;
     }
     .grid-container {
-        width: 100%;
+        width: 90%;
         grid-template-columns: 1fr;
         margin-bottom: 80px;
         margin-left: 0px;
         margin-right: 0px;
     }
     .container2 {
-        width: 100%;
+        width: 90%;
         height: 120px;
         margin-bottom: 30px;
     }
@@ -407,7 +407,7 @@ footer {
         margin-top: 30px;
     }
     .container3 {
-        width: 100%;
+        width: 90%;
         height: 283px;
     }
     .sub-container3 {
@@ -420,7 +420,7 @@ footer {
     footer {
         position: absolute;
         height: 120px;
-        width: 100%;
+        width: 100vw;
         margin-top: 805px;
     }
     .logo-light {
@@ -430,6 +430,6 @@ footer {
         margin-right: 30px;
         height: 48px;
         width: 140px;
-        margin-top: -80px;
+        margin-top: 38px;
     }
 }
