--- a/skilled-elearning-landing-page/starter-code/styles.css
+++ b/skilled-elearning-landing-page/starter-code/styles.css
@@ -356,8 +356,8 @@ footer {
         height: 101px;
         font-size: 2.5em;
         line-height: 50px;
-        margin-left: 16px;
-        margin-right: 10px;
+        margin-left: 8px;
+        margin-right: 8px;
     }
     .container1-text {
         width: 343px;
@@ -420,7 +420,7 @@ footer {
     footer {
         position: absolute;
         height: 120px;
-        width: 100vw;
+        width: 95vw;
         margin-top: 805px;
     }
     .logo-light {
@@ -431,5 +431,6 @@ footer {
         height: 48px;
         width: 140px;
         margin-top: 38px;
+        z-index: 2;
     }
 }
