--- a/skilled-elearning-landing-page/starter-code/styles.css
+++ b/skilled-elearning-landing-page/starter-code/styles.css
@@ -356,9 +356,8 @@ footer {
         height: 111px;
         font-size: 2.5em;
         line-height: 50px;
-        margin-left: 8px;
-        margin-right: 8px;
         padding: 2px;
+        overflow-x: hidden;
     }
     .container1-text {
         width: 343px;
@@ -431,7 +430,7 @@ footer {
         margin-right: 30px;
         height: 48px;
         width: 140px;
-        margin-top: 38px;
+        margin-top: -80px;
         z-index: 2;
     }
 }
