--- a/skilled-elearning-landing-page/starter-code/styles.css
+++ b/skilled-elearning-landing-page/starter-code/styles.css
@@ -27,6 +27,7 @@ body {
 button {
     width: 167px;
     height: 56px;
+    border: none;
 }
 
 .dark-button {
@@ -232,7 +233,7 @@ footer {
         left: 600px;
     }
     .container1 {
-        width: 100%;
+        width: 35%;
         height: 294px;
         margin-bottom: 50px;
     }
@@ -260,15 +261,15 @@ footer {
         width: 167px;
     }
     .image {
-        width: 401px;
+        max-width: 100%;
         height: 200px;
         margin-bottom: 93px;
-        overflow-x: hidden;
+        
     }
     .image-hero {
-        max-width: 100%;
+        width: 50%;
         height: 700.53px;
-        left: 350.31px;
+        left: 390.31px;
         top: -10px;
         overflow-x: hidden;
     }
@@ -358,6 +359,7 @@ footer {
         line-height: 50px;
         padding: 2px;
         overflow-x: hidden;
+        margin-left: 16px;
     }
     .container1-text {
         width: 343px;
